# quant-research-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
agents/: README.md  research-manager.agent.yaml
contract/: README.md  contract.json  strategy_authoring_contract.md
docs/: 00-overview.md  01-architecture.md  02-managed-agents-platform.md  03-agent-topology.md  04-quantconnect.md  05-data-trust-tiers.md  06-knowledge-layer.md  07-iteration-rubric.md  08-antibias-guardrails.md  09-visual-ui.md  10-orchestrator.md  11-authoring-contract.md  12-credentials-networking.md  13-build-phases.md  14-decisions.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infra/: README.md
knowledge/: README.md  pyproject.toml
knowledge/data/: README.md  ssrn_manifest.example.jsonl
knowledge/ingestion/: arxiv.py  common.py  quantresearch_repo.py  run_all.py  ssrn.py  strategy_library.py
knowledge/schema/: vectordb_schema.sql
knowledge/tests/: test_arxiv_ingestion.py  test_repo_ingestion.py  test_run_all.py  test_ssrn_ingestion.py
mcp/knowledge/: Dockerfile  README.md  pyproject.toml
mcp/knowledge/src/: search.py  server.py
mcp/knowledge/tests/: test_snippet_cap.py
orchestrator/: Dockerfile  README.md  pyproject.toml
orchestrator/app/: config.py  main.py  rubric.py
orchestrator/app/clients/: anthropic_client.py
orchestrator/app/events/: __init__.py  schema.py  sse_consumer.py  ws_relay.py
orchestrator/app/metrics/: __init__.py  deflated_sharpe.py
orchestrator/app/routes/: pdfs.py  sessions.py  steering.py  stream.py
orchestrator/app/sessions/: __init__.py  lifecycle.py  manager.py
orchestrator/tests/: test_contract_validator.py  test_deflated_sharpe.py  test_event_schema.py  test_pdf_route.py  test_stage_timer.py
(+53 files in other folders)
