[project]
name = "quant-research-orchestrator"
version = "0.0.1"
description = "FastAPI data-plane: Managed Agents SSE -> websocket relay + session/steering control."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92.0",        # beta managed-agents namespaces (sessions/events/vaults/memory_stores/files)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",     # orchestrator state (optional in early phases)
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6", "anyio>=4"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
